2002-03-13  Duncan Mak  <duncan@ximian.com>

	* XmlNamedNodeMap.cs (SetNamedItem): Check for the Name property.

	* XmlNamedNodeMap.cs (GetEnumerator): piggyback on the ArrayList implementation.
	(GetNamedItem (string, string)): implemented.
	(RemoveNamedItem): implemented.
	(SetNamedItem): implemented.

2002-03-12  Kral Ferch  <kral_ferch@hotmail.com>

	* XmlAttribute.cs: Moved a method from amongst properties down to
	it's alphabetical position in the methods section.
	
	* XmlNode.cs: Passes in 'this' to XmlNodeList constructor instead of
	last linked child.  Set XmlNode base class to return false for IsReadOnly().
	Implemented GetEnumerator() and RemoveChild().
	
	* XmlNodeListChildren.cs: Now stores the parent instead of the last child.
	This is to support the behavior that the Enumerator doesn't become invalid
	when changes to the children occur.  Flushed out rest of implementation for
	MoveNext, Current, and Reset.

2002-03-12  Duncan Mak  <duncan@ximian.com>

	* XmlCharacterData.cs: Reformatted the properties for better readability.

	* XmlLinkedNode.cs: Removed the awful boxy comments.

	* XmlNamedNodeMap.cs (Count):
	(Item): Implemented. Tests will be coming.

	* XmlEntityReference.cs: 
	* XmlSignificantWhitespace.cs: Implemented these classes except for
	the Clone, WriteContentTo and WriteTo methods. Will have to
	investigate into these later.

2002-03-11  Duncan Mak  <duncan@ximian.com>

	* IHasXmlNode.cs: Added to CVS.

2002-03-08  Jason Diamond <jason@injektilo.org>

	* XmlParserContext.cs: Added missing constructors and missing Encoding 
	property.

	* XmlTextReader.cs: Start using the XmlParserContext class.

2002-03-08  Jason Diamond <jason@injektilo.org>

	* XmlTextReader.cs: Implemented MoveToElement and MoveToFirstAttribute.

2002-03-08  Mike Kestner  <mkestner@speakeasy.net>

	* XmlNode.cs (Item): Implemented both indexers.

2002-03-08  Jason Diamond  <jason@injektilo.org>
