@@ -1,6 +1,8 @@
 2002-03-13  Duncan Mak  <duncan@ximian.com>
 
 	* XmlNamedNodeMap.cs (SetNamedItem): Check for the Name property.
+	(SetNamedItem): Reverted (added back in) the patch with the
+	ReadOnly checks. "Don't doubt yourself, my son... you were right!"
 
 	* XmlNamedNodeMap.cs (GetEnumerator): piggyback on the ArrayList implementation.
 	(GetNamedItem (string, string)): implemented.
